Fixed bug #44681 (Resources used as array keys get converted to 0)